fix: fixing z-index overlap #65

--- a/front/src/styles/components/home/_user.scss
+++ b/front/src/styles/components/home/_user.scss
@@ -70,6 +70,7 @@
 
   &-settings {
     padding-right: 20px;
+    z-index: 1;
   }
 
   .user-avatar__container {
